--- a/devops/pumps/docker-compose.yml
+++ b/devops/pumps/docker-compose.yml
@@ -30,7 +30,7 @@ services:
 
     cs-chain-pumps-btc:
       network_mode: host
-      image: cybernode/cs-chain-pumps:release-v1.0.0.M2
+      image: cybernode/cs-chain-pumps:release-v1.0.0.M3
       restart: on-failure
       environment:
          CS_CHAINS_TO_PUMP: BITCOIN, BITCOIN_CASH
@@ -44,7 +44,7 @@ services:
 
     cs-chain-pumps-eth:
       network_mode: host
-      image: cybernode/cs-chain-pumps:release-v1.0.0.M2
+      image: cybernode/cs-chain-pumps:release-v1.0.0.M3
       restart: on-failure
       environment:
          CS_CHAINS_TO_PUMP: ETHEREUM, ETHEREUM_CLASSIC
@@ -58,8 +58,9 @@ services:
 
     cs-search-api:
       network_mode: host
-      image: cybernode/cs-search-api:release-v1.0.0.M2
+      image: cybernode/cs-search-api:release-v1.0.0.M3
       restart: on-failure
       environment:
          CASSANDRA_HOSTS: localhost
          CS_LOG_LEVEL: DEBUG
+         CORS_ALLOWED_ORIGINS: *
